--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "mining-shop-frontend",
   "version": "1.0.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@supabase/supabase-js": "^2.39.3",
     "react": "^18.2.0",
